# Exordia

./: .gitignore  CMakeLists.txt  README.md  RenderDocCaptureSettings.cap  app.aps
graphics_old/: graphics.cpp  graphics.hpp  shader.cpp
graphics_old/compute/: compute_shader.cpp
graphics_old/internal/: descriptors.cpp  descriptors.hpp  device.hpp  graphics_pipeline.cpp  graphics_pipeline.hpp  pipeline_manager.cpp  pipeline_manager.hpp  render_pass.hpp  renderer.cpp
lib/spirv-reflect/: spirv_reflect.h
src/: boids.cpp  boids.hpp  close_handler.hpp  engine.cpp  engine.hpp  engine_types.hpp  hydraulic_erosion.cpp  main.cpp  modules.cpp
src/analysis/: rolling_average.hpp
src/core/: asset_data.cpp  asset_data.hpp  asset_manager.cpp  asset_manager.hpp  game_object.hpp  mesh.cpp  mesh.hpp  object.hpp  object_manager.hpp  random.cpp  random.hpp  scene.cpp  temp_data.cpp  temp_data.hpp  textureData.cpp  textureData.hpp
src/core/assets/: asset_texture.hpp  material.hpp  shader.cpp  shader.hpp  shader_asset.cpp  shader_asset.hpp
src/core/components/: mesh_components.hpp
src/core/resources/: material.cpp  material.hpp
src/data_structures/: dictionary.hpp  stack_list.hpp
src/graphics/: api.hpp  containers.hpp  draw_funcs.cpp  draw_funcs.hpp  graphics.cpp  graphics.hpp  graphics_api.hpp  graphics_data.cpp  graphics_data.hpp  graphics_object_manager.hpp  limits.hpp  push_constants.hpp  render_graph.hpp  standards.hpp  utils.hpp  window.cpp  window.hpp  window_manager.cpp  window_manager.hpp
src/graphics/api/: descriptor_standards.hpp  handles.cpp  handles.hpp  layout.hpp  mesh_config.hpp  shader_compile.cpp  shader_compile.hpp  shader_config.hpp  shader_layout.cpp  shader_layout.hpp  shared_config.hpp  texture_properties.cpp  texture_properties.hpp  vertex_layout.cpp  vertex_layout.hpp
src/graphics/api/resources/: material.cpp  material.hpp  shader.cpp  shader.hpp  texture_data.cpp  texture_data.hpp
src/graphics/backend/: backend_data.cpp  backend_data.hpp  buffer.cpp  buffer.hpp  device.cpp  device.hpp  image.cpp  image.hpp  physical_device.cpp  physical_device.hpp  swap_chain.hpp  vulkan_backend.cpp  vulkan_backend.hpp  vulkan_include.h  window.cpp  window.hpp
src/graphics/buffers/: graphics_mesh.hpp
src/graphics/internal/: render_pass.cpp  render_pass.hpp
src/graphics/rendering/: draw_funcs.cpp  draw_funcs.hpp  frame_orchestrator.cpp  frame_orchestrator.hpp  render_context.hpp  render_graph.cpp  render_graph.hpp  render_node.cpp  render_node.hpp  renderer.cpp  renderer.hpp  swap_chain.cpp  swap_chain.hpp
src/graphics/resources/: buffer.cpp  buffer.hpp  descriptor_buffer.cpp  descriptor_buffer.hpp  descriptor_set.cpp  descriptor_set.hpp  descriptors.cpp  descriptors.hpp  graphics_material.cpp  graphics_material.hpp  graphics_mesh.cpp  graphics_mesh.hpp  graphics_pipeline.cpp  graphics_pipeline.hpp  graphics_pipeline2.cpp  image.cpp  image.hpp  material.hpp  mesh_manager.cpp  mesh_manager.hpp  pipeline_manager.cpp  pipeline_manager.hpp  push_constants.hpp  registry.cpp  registry.hpp  sampler.cpp  sampler.hpp  shader.hpp  shader_buffer.cpp  shader_buffer.hpp  shader_layout.cpp  shader_layout.hpp  texture.cpp  texture.hpp
src/graphics/resources/layouts/: shader_layout.cpp  shader_layout.hpp  var_layout.cpp  var_layout.hpp  vertex_layout.cpp  vertex_layout.hpp
src/graphics/resources/processing/: shader_reflection.cpp  shader_reflection.hpp
src/graphics/resources/registries/: material_registry.cpp  material_registry.hpp  mesh_registry.cpp  mesh_registry.hpp  pipeline_registry.cpp  pipeline_registry.hpp  registry.cpp  registry.hpp  texture_registry.cpp  texture_registry.hpp
src/graphics/utils/: alignment.hpp  packing.hpp
src/graphics_old/: containers.cpp  draw_funcs.hpp  graphics.cpp  render_context.hpp  render_graph.hpp
src/graphics_old/internal/: device.cpp
src/memory/: allocator_base.hpp  allocators.h  arena_allocator.cpp  arena_allocator.hpp  pool_allocator.hpp  ref.hpp  ring_allocator.cpp  ring_allocator.hpp
src/primitives/: camera.cpp  camera.hpp  color.cpp  color.hpp
src/runtime/: exordia.cpp  exordia.hpp
src/tests/: graphics_tests.cpp  graphics_tests.hpp
src/utils/: console.cpp  console.hpp  debug.cpp  debug.hpp  file_util.cpp  file_util.hpp  flattener.hpp  imgui_extensions.cpp  imgui_extensions.hpp  nd_vector.hpp  packing.hpp  random.hpp  ref.hpp  typeAliases.hpp
